<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.map.MapNavigationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <TextView
                android:id="@+id/navigationModeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/navigation_location_mode"
                android:textSize="24sp" />

            <RadioGroup
                android:id="@+id/hotelLocationRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/navigationModeD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/navigation_location_mode_d" />

                <RadioButton
                    android:id="@+id/navigationModeB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/navigation_location_mode_b" />

                <RadioButton
                    android:id="@+id/navigationModeL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/navigation_location_mode_l" />

                <RadioButton
                    android:id="@+id/navigationModeW"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/navigation_location_mode_w" />
            </RadioGroup>

            <TextView
                android:id="@+id/navigationAvoidText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/navigation_location_avoid"
                android:textSize="24sp" />

            <CheckBox
                android:id="@+id/navigationAvoidT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/navigation_location_avoid_t" />

            <CheckBox
                android:id="@+id/navigationAvoidH"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/navigation_location_avoid_h" />

            <CheckBox
                android:id="@+id/navigationAvoidF"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/navigation_location_avoid_f" />

            <EditText
                android:id="@+id/navigationEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/navigation_location_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/navigation_location_name" />

            <Button
                android:id="@+id/startNavigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/start_navigation"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>