<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".layout.attractions.AddMarkerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp">

            <EditText
                android:id="@+id/markerTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/add_marker_title_edittext"
                android:hint="@string/add_marker_title_edittext"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/markerSnippet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/add_marker_snippet_edittext"
                android:hint="@string/add_marker_snippet_edittext"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/markerPx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/add_marker_px_edittext"
                android:hint="@string/add_marker_px_edittext"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/markerPy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:text="@string/add_marker_py_edittext"
                android:hint="@string/add_marker_py_edittext"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/getMarkerDataButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/add_marker_get_data"
                android:textSize="18sp" />

            <Button
                android:id="@+id/addMarkerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:onClick="onClick"
                android:paddingLeft="50dp"
                android:paddingTop="10dp"
                android:paddingRight="50dp"
                android:paddingBottom="10dp"
                android:text="@string/add_marker_button"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>